--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -18,7 +18,7 @@
             </div>
 			<ul>
 				<li>
-					<a href="{{url_for('loadPage')}}">
+					<a href="{{url_for('addEmpHome')}}">
 						<img src="{{url_for('static', filename='Images/add.png') }}" alt="AddEmp">
 						<p>Add New Employee</p>
 					</a>
